<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/trainStationText"
        android:layout_width="142dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:text="@string/textView"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/trainStationScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainStationPicture" />

    <TextView
        android:id="@+id/parkText"
        android:layout_width="54dp"
        android:layout_height="33dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/parkText"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkPicture" />

    <TextView
        android:id="@+id/universityText"
        android:layout_width="109dp"
        android:layout_height="34dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="36dp"
        android:text="@string/universityText"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/universityPicture" />

    <TextView
        android:id="@+id/riverScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="96dp"
        android:text="@string/riverScore"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riverText" />

    <TextView
        android:id="@+id/trainStationScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="@string/textViewScore"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainStationText" />

    <TextView
        android:id="@+id/parkScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="13dp"
        android:text="@string/parkScore"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkText" />

    <TextView
        android:id="@+id/universityScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="84dp"
        android:text="@string/universityScore"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/universityText" />

    <TextView
        android:id="@+id/riverText"
        android:layout_width="59dp"
        android:layout_height="37dp"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="72dp"
        android:text="@string/riverString"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/trainStationPicture"
        android:layout_width="204dp"
        android:layout_height="137dp"
        android:layout_marginTop="104dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/station" />

    <ImageView
        android:id="@+id/riverImage"
        android:layout_width="243dp"
        android:layout_height="215dp"
        android:layout_marginTop="65dp"
        app:layout_constraintStart_toEndOf="@+id/trainStationPicture"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/river" />

    <ImageView
        android:id="@+id/parkPicture"
        android:layout_width="270dp"
        android:layout_height="158dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/brimbank" />

    <ImageView
        android:id="@+id/universityPicture"
        android:layout_width="228dp"
        android:layout_height="227dp"
        android:layout_marginStart="204dp"
        android:layout_marginBottom="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/university" />

</androidx.constraintlayout.widget.ConstraintLayout>